--- a/figures/fig6/figure6.ipynb
+++ b/figures/fig6/figure6.ipynb
@@ -37,15 +37,6 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "avg_img_per_country = get_image_per_country(countries)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -60,18 +51,23 @@
    ],
    "source": [
     "fig = plt.figure(figsize=(22, 12))\n",
-    "# gs = GridSpec(ncols=1,nrows=3, figure=fig)\n",
     "gs = GridSpec(nrows=len(categories), ncols=3, **{'width_ratios':[8,9,14],'height_ratios': [1, 1, 1], 'hspace': 0.1, 'bottom': 0.15},figure=fig)\n",
     "\n",
     "# a)\n",
     "ax0 = fig.add_subplot(gs[:,0])\n",
+    "avg_img_per_country = get_image_per_country(countries)\n",
     "plot_hist(avg_img_per_country, ax0)\n",
-    "ax0.text(-0.05, 1.035, 'a)', transform=ax0.transAxes, size=16, va='top', ha='right')\n",
+    "ax0.text(-0.05, 1.035, 'a)', transform=ax0.transAxes, \n",
+    "         size=16, va='top', ha='right')\n",
     "\n",
     "\n",
     "# b)\n",
     "ax_list=[fig.add_subplot(gs[i,1]) for i in range(3)]\n",
     "plot_female_percentage(countries,ax_list,fig,0.12)\n",
+    "ax_list[0].text(-0.05, 1.12, 'b)', transform=ax_list[0].transAxes,\n",
+    "                size=16, va='top', ha='right')\n",
+    "\n",
+    "\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
