--- a/figures/fig6/figure6.ipynb
+++ b/figures/fig6/figure6.ipynb
@@ -14,6 +14,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# required libraries\n",
+    "% pip install numpy matplotlib seaborn requests pillow pandas pycountry"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
