--- a/figures/fig7/figure7.ipynb
+++ b/figures/fig7/figure7.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "08c126a2",
    "metadata": {},
    "outputs": [
@@ -87,6 +87,9 @@
     "ax_img.axis('off')\n",
     "\n",
     "plt.tight_layout()\n",
+    "# plt.savefig(\"./some_path.pdf\", \n",
+    "#             dpi=300, \n",
+    "#             bbox_inches='tight')\n",
     "plt.show()"
    ]
   }
