removed the small warning

--- a/figures/fig7/figure7.ipynb
+++ b/figures/fig7/figure7.ipynb
@@ -5,13 +5,7 @@
    "id": "a36695d8",
    "metadata": {},
    "source": [
-    "This figure comes with its own data but please consider downloading the dataset at [Harvard Dataverse](https://doi.org/10.7910/DVN/OFN15B)\n",
-    "\n",
-    "<blockquote style=\"background-color:#fff8e1; border-left:5px solid #ffeb3b; padding:10px 20px; color:#333; font-style:italic;\">\n",
-    "  ⚠️ <strong>Note:</strong> Dataset versions ≤ <strong>2.0</strong> contain only a <strong>10%</strong> sample of the full data.<br>\n",
-    "  As a result, figures derived from these versions may differ from those reported in the paper.\n",
-    "</blockquote>\n",
-    "\n"
+    "This figure comes with its own data but please consider downloading the dataset at [Harvard Dataverse](https://doi.org/10.7910/DVN/OFN15B)"
    ]
   },
   {
